manifests/immich/machinelearning.yaml
# Immich machine-learning
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v2.7.4
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: ml-data
              mountPath: /cache
      volumes:
        - name: ml-data
          persistentVolumeClaim:
            claimName: immich-ml-cache

---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
